- Fixed bug #42657 (ini_get() returns incorrect value when default is NULL)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@243004 c90b9560-bf6c-de11-be94-00142212c4b1